# upnpc-rs

./: Cargo.toml  Justfile  README.md
lib/: Cargo.toml  README.md
lib/src/: lib.rs
src/: command_line.rs  main.rs
